[package]
name = "expre"
version = "0.1.0"
authors = ["Alexander Antoshuk <alexander.antoshuk@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/alexantoshuk/expre"
documentation = "https://docs.rs/expre/"
description = """Fast evaluation of algebraic expressions"""
keywords = ["evaluate", "math", "algebra", "calculate", "expression"]
categories = ["mathematics", "science", "parser-implementations"]
edition = "2021"

[profile.bench]
# debug = true
opt-level = 3
lto = true
panic = "abort"
codegen-units = 1

[profile.release]
opt-level = 3
panic = "abort"
codegen-units = 1
lto = "fat"

[dependencies]
arrayvec = "0.7.6"
bytemuck = "1.20.0"
derivative = "2.2.0"
discriminant = "0.1.0"
dyn-fmt = "^0.4"
gxhash = "3.4.1"
indexmap = "2.5.0"
num-traits = "^0.2"
once_map = "0.4.21"
ordered-float = "4.6.0"
paste = "1.0.15"
unhygienic2 = "0.1.0"
wide = "0.7.30"


[dev-dependencies]
criterion = { version = "^0.5", features = ["html_reports"] }


# [[bench]]
# name = "bench"
# harness = false


[features]
default = []
